--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node service/server",
-    "server": "nodemon service/server"
+    "server": "nodemon server"
   },
   "repository": {
     "type": "git",
